--- a/Yamato/Yamato.csproj
+++ b/Yamato/Yamato.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <Folder Include="Module\" />
+    <Folder Include="Extensions\" />
     <Folder Include="Service\" />
   </ItemGroup>
 
