wops in commandhandler

--- a/Yamato/Yamato.csproj
+++ b/Yamato/Yamato.csproj
@@ -39,4 +39,10 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
